--- a/style.css
+++ b/style.css
@@ -29,3 +29,11 @@ span {
     filter: hue-rotate(720deg);
   }
 }
+#lol{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+    color: aqua;
+}
+
